# rabbitmq-consumer-gurobi

./: .gitignore  Makefile  README.md  pyproject.toml
src/: consumer.py  gurobi.py  logs.py
